# hable-ya

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent_eval.py  alembic.ini  docker-compose.yml  generate_sft_examples.py  habla_fixture_spec.md  pyproject.toml
.github/workflows/: ci.yml
api/: main.py
api/routes/: dev.py  health.py  session.py
docs/artifacts/hable-ya/: README.md
docs/artifacts/hable-ya/chats/: chat1.md
docs/artifacts/hable-ya/project/: app.jsx  hable-ya.html
docs/artifacts/hable-ya/project/components/: home.jsx  icons.jsx  orb.jsx  profile.jsx  recap.jsx  session.jsx  tweaks.jsx
docs/specs/: ARCHITECTURE.md  OVERVIEW.md  ROADMAP.md
docs/specs/021-voice-pipeline/: decision.md  spec.md
docs/specs/023-agent-loop/: decision.md  spec.md
docs/specs/028-postgres-age-setup/: decision.md  spec.md
docs/specs/029-learner-model/: decision.md  spec.md
docs/specs/034-agent-eval/: decision.md  spec.md
docs/specs/046-web-frontend-voice-shell/: decision.md  spec.md
docs/specs/048-stt-tts-quality-and-latency/: decision.md  spec.md
docs/specs/049-learner-leveling/: decision.md  spec.md
eval/: compare.py  judge_recasts.py  run_eval.py
eval/agent/: _cache.py  accumulator.py  compare.py  opus_judge.py  run_agent_eval.py  synthetic_learner.py  types.py
eval/agent/personas/: a1_gender_agreement_familia.json  a1_ser_estar_cafeteria.json  a1_verb_conjugation_dia_normal.json  a2_gender_agreement_restaurante.json  a2_preterite_imperfect_vacaciones.json  a2_ser_estar_planes.json  b1_por_para_consejos.json  b1_preterite_imperfect_recuerdos.json  b1_subjunctive_avoidance_problema.json  b2_idiomatic_dietas.json  b2_register_slip_proyecto.json  b2_subjunctive_por_para_decision.json  c1_anglicisms_ia.json  c1_register_slip_libro.json  c1_subjunctive_register_arte.json  schema.py
eval/fixtures/: schema.py
eval/scoring/: __init__.py  language.py  recast.py  register.py  turn.py
finetune/: format.py  generate.py  validate.py
finetune/review/: cli.py
hable-ya/: config.py
hable-ya/db/: hable_ya_db.py  schema.sql
hable-ya/learner/: errors.py
hable-ya/pipeline/: runner.py
hable-ya/pipeline/processors/: tool_handler.py  turn_observer.py
hable-ya/pipeline/prompts/: builder.py
hable-ya/tools/: schema.py
hable_ya/: config.py  cuda_bootstrap.py
hable_ya/db/: __init__.py  connection.py  hable_ya_db.py  migrations.py
hable_ya/db/alembic/: env.py
hable_ya/db/alembic/versions/: 20c019e280a9_enable_extensions.py  99507a1b3027_band_history.py  bd55d203ae25_learner_model.py
hable_ya/learner/: aggregations.py  bands.py  errors.py  graph.py  ingest.py  profile.py  themes.py  vocabulary.py
hable_ya/learner/leveling/: __init__.py  policy.py  service.py
hable_ya/pipeline/: runner.py  serializer.py  services.py
hable_ya/pipeline/processors/: tool_handler.py  turn_observer.py
hable_ya/pipeline/prompts/: builder.py  register.py  render.py
hable_ya/runtime/: observations.py
hable_ya/tools/: schema.py
notebooks/: gemma4_finetune.ipynb
scripts/: benchmark_concurrency.py  benchmark_latency.py  download_model.py  export_session.py  generate_eval_fixtures.py  init_db.py  replay_placement.py  voice_client.py
scripts/fixtures/: __init__.py  backfill_legacy.py  consolidate_fixtures.py  generate_fixtures.py  review_fixtures.py  validate_fixtures.py
scripts/fixtures/prompts/: __init__.py  _variance.py  base.py  cold_start.py  error_pattern_threshold.py  l1_handling.py  mimicry_cycle.py  multi_error.py  register_boundary.py  single_error_recast.py  tool_call_correctness.py
tests/: conftest.py  test_age_spike.py  test_agent_accumulator.py  test_agent_aggregates.py  test_agent_cache.py  test_agent_judge_prompts.py  test_agent_judge_smoke.py  test_agent_learner.py  test_agent_learner_smoke.py  test_agent_personas.py  test_aggregations_shared.py  test_band_history.py  test_db.py  test_dev_endpoints.py  test_health.py  test_init_db.py  test_learner_errors.py  test_learner_graph.py  test_learner_profile.py  test_learner_vocabulary.py  test_leveling_policy.py  test_log_turn_ingestion.py  test_observations.py  test_placement_policy.py  test_prompts.py  test_runner.py  test_scoring.py  test_themes.py  test_tool_handler.py  test_tools.py  test_validate_fixtures.py  test_variance.py
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web/spike/: index.html  pcm-worklet.js  spike.js
web/src/: App.tsx  main.tsx
web/src/components/: icons.tsx
web/src/components/orb/: OrbHalo.tsx
web/src/routes/: Home.tsx  Session.tsx
web/src/styles/: globals.css  tokens.css
web/src/voice/: amplitude.ts  client.ts  types.ts
